--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,6 @@ project(TaskScheduler VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# include directories
-include_directories(${CMAKE_SOURCE_DIR}/include)
-
 # Add source files
 file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
@@ -17,6 +14,11 @@ add_executable(TaskScheduler ${SOURCES})
 
 # Modern include directories
 target_include_directories(TaskScheduler PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
+set_target_properties(TaskScheduler PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+    PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+)
 
 # Compiler specific flags
 if(MSVC)
